--- a/ourtubehome/templates/index.html
+++ b/ourtubehome/templates/index.html
@@ -126,14 +126,14 @@
 <section class="content">
  <div class="overall" id="overall">
 
-  <h1 class="cool-transition"><strong>Empowering content creators</strong></h1>
-  <h1 class="cool-transition"><strong>to change lives</strong></h1>
+  <h1 class="cool-transition"><strong>Introducing Our-Tube</strong></h1>
+  <h1 class="cool-transition"><strong>AI Powered Funding Regulation</strong></h1>
   <a href="{% url 'funding_info' %}"><button class="donate-btn-btn">Start a project</button></a>
   
  </div>  
 </section>
 <footer style="margin-top:500px">
-  <p>&copy; 2023 <a href="{% url 'home' %}" style="text-decoration: underline; color: black;">our-tube.com</a>. All rights reserved.</p>
+  <p>&copy; 2024 <a href="{% url 'home' %}" style="text-decoration: underline; color: black;">our-tube.com</a>. All rights reserved.</p>
   <ul>
       <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
       <li>+1 (812)-671 6631</li>
