--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -180,7 +180,7 @@ h1 {
 .cool-transition {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  color: #000;
+  color: black;
   margin-bottom: 0em;
 }
 .overall{
