--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -1,3 +1,45 @@
+.withdrawals-container {
+  max-width: 800px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.withdrawal-header {
+  display: flex;
+  background-color: #f0f0f0;
+  padding: 10px;
+  font-weight: bold;
+}
+
+
+.withdrawal-total {
+  display: flex;
+  background-color: #f3f3f3;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.tracked {
+  background-color: #ceffd3;
+}
+.untracked {
+  background-color: #ffced1;
+}
+
+.withdrawal-total div {
+  flex: 1;
+}
+
+
+.withdrawal-row {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+
 
 /* Dark overlay */
 .agreement-overlay {
@@ -839,6 +881,41 @@ font-family: 'Lato', sans-serif; font-weight: 400;
 }
 
 
+.escanor{
+  color: #0a383f;
+  font-size: 2rem;
+  padding: 0px;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+}
+
+.throatgoat{
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  list-style: none;
+  justify-content: space-between;
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  background-color: #ffffff;
+  padding: 0 100px;
+
+
+}
+
+.edit-bar{
+  width: 100%;
+  height: 5%;
+  background-color: #ffffff;
+  
+}
+
+.litems{
+  font-size: large;
+  color: #1774e5;
+  cursor: pointer;
+}
 
 
 .sexy-container {
@@ -1196,6 +1273,7 @@ background-color: #ebebeb;
 .comment-form button:hover{
   background-color: rgba(8, 164, 117, 0.985)
 }
+
 
 .donate-btn-btn{
   background-color: #28a745;
@@ -1636,6 +1714,17 @@ header{
   .bidden{
     display: none;
   }
+  .yosha{
+    width: 100%;
+    display: none;
+  }
+  
+@media(max-width:950px){
+  .yosha{
+
+    display: block;
+   }
+}
   
 @media(max-width:600px){
   .row{
